Trigger scripts with +plugin/run
