# src/main/java/jasper/web/rest/OriginController.java
@@ -1,31 +1,25 @@
 package jasper.web.rest;
 
-import com.rometools.rome.io.FeedException;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.constraints.Pattern;
-import jasper.domain.Ref;
 import jasper.domain.proj.HasOrigin;
 import jasper.service.OriginService;
 import org.hibernate.validator.constraints.Length;
-import org.hibernate.validator.constraints.URL;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.io.IOException;
 import java.time.Instant;
 
-import static jasper.domain.Ref.URL_LEN;
 import static jasper.domain.proj.HasOrigin.ORIGIN_LEN;
 
 @RestController
@@ -40,34 +34,6 @@ public class OriginController {
 
 	@Autowired
 	OriginService originService;
-
-	@ApiResponses({
-		@ApiResponse(responseCode = "204"),
-		@ApiResponse(responseCode = "404", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
-		@ApiResponse(responseCode = "503", description = "Error pushing", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
-	})
-	@PostMapping("push")
-	@ResponseStatus(HttpStatus.NO_CONTENT)
-	void push(
-		@RequestParam @Length(max = URL_LEN) @Pattern(regexp = Ref.REGEX)  @URL String url,
-		@RequestParam(defaultValue = "") @Length(max = ORIGIN_LEN) @Pattern(regexp = HasOrigin.REGEX) String origin
-	) throws FeedException, IOException {
-		originService.push(url, origin);
-	}
-
-	@ApiResponses({
-		@ApiResponse(responseCode = "204"),
-		@ApiResponse(responseCode = "404", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
-		@ApiResponse(responseCode = "503", description = "Error pulling", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
-	})
-	@PostMapping("pull")
-	@ResponseStatus(HttpStatus.NO_CONTENT)
-	void pull(
-		@RequestParam @Length(max = URL_LEN) @Pattern(regexp = Ref.REGEX)  @URL String url,
-		@RequestParam(defaultValue = "") @Length(max = ORIGIN_LEN) @Pattern(regexp = HasOrigin.REGEX) String origin
-	) throws FeedException, IOException {
-		originService.pull(url, origin);
-	}
 
 	@ApiResponses({
 		@ApiResponse(responseCode = "204"),
