# src/main/java/jasper/web/rest/ScrapeController.java
@@ -1,13 +1,10 @@
 package jasper.web.rest;
 
-import com.rometools.rome.io.FeedException;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import jakarta.validation.constraints.Pattern;
-import jasper.domain.proj.HasOrigin;
 import jasper.service.ScrapeService;
 import jasper.service.dto.RefDto;
 import org.hibernate.validator.constraints.Length;
@@ -15,14 +12,11 @@ import org.hibernate.validator.constraints.URL;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Profile;
 import org.springframework.http.CacheControl;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.io.IOException;
@@ -30,7 +24,6 @@ import java.net.URISyntaxException;
 import java.util.concurrent.TimeUnit;
 
 import static jasper.domain.Ref.URL_LEN;
-import static jasper.domain.proj.HasOrigin.ORIGIN_LEN;
 
 @Profile("proxy | file-cache")
 @RestController
@@ -41,22 +34,6 @@ public class ScrapeController {
 
 	@Autowired
 	ScrapeService scrapeService;
-
-	@ApiResponses({
-		@ApiResponse(responseCode = "204"),
-		@ApiResponse(responseCode = "400", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
-		@ApiResponse(responseCode = "403", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
-		@ApiResponse(responseCode = "404", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
-		@ApiResponse(responseCode = "503", description = "Error scraping", content = @Content(schema = @Schema(ref = "https://opensource.zalando.com/problem/schema.yaml#/Problem"))),
-	})
-	@PostMapping("feed")
-	@ResponseStatus(HttpStatus.NO_CONTENT)
-	void scrapeFeed(
-		@RequestParam @Length(max = URL_LEN) @URL String url,
-		@RequestParam(defaultValue = "") @Length(max = ORIGIN_LEN) @Pattern(regexp = HasOrigin.REGEX) String origin
-	) throws FeedException, IOException {
-		scrapeService.feed(url, origin);
-	}
 
 	@ApiResponses({
 		@ApiResponse(responseCode = "200"),
